force-app/main/default/objects/CC_Application_Contact__c/CC_Application_Contact__c.object-meta.xml
<CustomObject>
    <description>This object gets the contacts/members add from the application wizard on the portal</description>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>APC-{00000}</displayFormat>
        <label>APC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>