force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Adult_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Adult_Scheduled_Date__c</fullName>
    <label>Adult CPR Scheduled Date</label>
    <type>Date</type>
</CustomField>