force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Age__c.field-meta.xml
<CustomField>
    <fullName>CC_Age__c</fullName>
    <formula>FLOOR((TODAY() - CC_Date_of_Birth__c + 1) / 365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>