force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Age_Category__c.field-meta.xml
<CustomField>
    <fullName>CC_Age_Category__c</fullName>
    <formula>IF(
((TODAY() - CC_Date_of_Birth__c) / 365) &lt; 4,
&apos;Infant&apos;,
IF(
((TODAY() - CC_Date_of_Birth__c) / 365) &lt; 7,
&apos;Preschool&apos;,
IF(
((TODAY() - CC_Date_of_Birth__c) / 365) &gt;= 7,
&apos;School Age&apos;,
null
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Category</label>
    <type>Text</type>
</CustomField>