force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>