force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Applicant__c.field-meta.xml
<CustomField>
    <fullName>CC_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Contacts (Applicant)</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>