force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Applicant_Name__c</fullName>
    <label>Applicant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>