force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Apt_Suite__c.field-meta.xml
<CustomField>
    <fullName>CC_Apt_Suite__c</fullName>
    <label>Apt Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>