force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Are_the_children_a_sibling_group__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_the_children_a_sibling_group__c</fullName>
    <label>Are the children a sibling group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>