force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Are_you_a_tribal_member__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_you_a_tribal_member__c</fullName>
    <label>Are you a tribal member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>