force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Background_Check_date__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Check_date__c</fullName>
    <label>Background Check date</label>
    <type>Date</type>
</CustomField>