force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Background_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check Required</label>
    <type>Checkbox</type>
</CustomField>