force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Background_Health_Attestation__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Health_Attestation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Health Attestation</label>
    <type>Checkbox</type>
</CustomField>