force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Background_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Status__c</fullName>
    <label>Background Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Background Check Requested</fullName>
            </value>
            <value>
                <fullName>Background Check Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Not Satisfactory</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>