force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Background_Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Status_Comment__c</fullName>
    <label>Background Status Comment</label>
    <type>TextArea</type>
</CustomField>