force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Benefit_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Benefit_Eligibility_Status__c</fullName>
    <label>Benefit Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>