force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_Address__c</fullName>
    <label>Billing Address</label>
    <type>Address</type>
</CustomField>