force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Billing_County_Other__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_County_Other__c</fullName>
    <label>Billing County(Other)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>