force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Birth_Country__c.field-meta.xml
<CustomField>
    <fullName>CC_Birth_Country__c</fullName>
    <label>Birth Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>