force-app/main/default/objects/CC_Application_Contact__c/fields/CC_BRC_Consent_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_BRC_Consent_Request_Date__c</fullName>
    <label>BRC Consent Request Date</label>
    <type>DateTime</type>
</CustomField>