force-app/main/default/objects/CC_Application_Contact__c/fields/CC_BRC_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_BRC_Consent_Status__c</fullName>
    <label>BRC Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>