force-app/main/default/objects/CC_Application_Contact__c/fields/CC_BRC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_BRC_Expiration_Date__c</fullName>
    <label>BRC Expiration Date</label>
    <type>Date</type>
</CustomField>