force-app/main/default/objects/CC_Application_Contact__c/fields/CC_BRC_Required__c.field-meta.xml
<CustomField>
    <fullName>CC_BRC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Background Check Needed or Not</description>
    <label>BRC Required</label>
    <type>Checkbox</type>
</CustomField>