force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Business_License_Application__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_License_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>