force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Business_Management_Record_Info__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_Management_Record_Info__c</fullName>
    <description>Designation Types for Business Management</description>
    <label>Business Management/Record Info</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account / Books</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Personal Records</fullName>
            </value>
            <value>
                <fullName>Children’s Records</fullName>
            </value>
            <value>
                <fullName>Financial Documentation</fullName>
            </value>
            <value>
                <fullName>Members Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>