force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Child_Age__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>