force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Child_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Expiration_Date__c</fullName>
    <label>Child CPR Expiration Date</label>
    <type>Date</type>
</CustomField>