force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Child_Information_Does_not_Matched__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Information_Does_not_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Information Does not Matched</label>
    <type>Checkbox</type>
</CustomField>