force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Child_Special_need_identified__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Special_need_identified__c</fullName>
    <inlineHelpText>Has a special need been identified for this child?</inlineHelpText>
    <label>Child Special need identified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>