force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Child_support_case_or_parenting_plan__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_support_case_or_parenting_plan__c</fullName>
    <label>Child support case or parenting plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open case with Child Support Enforcement Division</fullName>
            </value>
            <value>
                <fullName>Court-Ordered Parenting Plan</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>