force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Claiming_a_good_cause_exemption__c.field-meta.xml
<CustomField>
    <fullName>CC_Claiming_a_good_cause_exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claiming a good cause exemption?</label>
    <type>Checkbox</type>
</CustomField>