force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>CC_Contact_Preference__c</fullName>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>