force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Convicted_Pending_indictment_crime__c.field-meta.xml
<CustomField>
    <fullName>CC_Convicted_Pending_indictment_crime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convicted/Pending indictment for crime</label>
    <type>Checkbox</type>
</CustomField>