force-app/main/default/objects/CC_Application_Contact__c/fields/CC_County_Billing__c.field-meta.xml
<CustomField>
    <fullName>CC_County_Billing__c</fullName>
    <label>County Billing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>