force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Course_of_study_training_program__c.field-meta.xml
<CustomField>
    <fullName>CC_Course_of_study_training_program__c</fullName>
    <label>Course of study/training program?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>