force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Current_Staff_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Current_Staff_Status__c</fullName>
    <label>CC_Current Staff Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>