force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Current_student_status_of_this_Member__c.field-meta.xml
<CustomField>
    <fullName>CC_Current_student_status_of_this_Member__c</fullName>
    <inlineHelpText>Current student status of this Household Member?</inlineHelpText>
    <label>Current student status of this Member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attending Grades K-6</fullName>
            </value>
            <value>
                <fullName>Attending Grades 7-12 &lt; = 12 hrs/wk</fullName>
            </value>
            <value>
                <fullName>Attending Grades 7-12 &gt; 12 hrs/wk</fullName>
            </value>
            <value>
                <fullName>Attending College &lt; =8 hrs/wk</fullName>
            </value>
            <value>
                <fullName>Attending College &gt;8 hrs/wk</fullName>
            </value>
            <value>
                <fullName>Attending Training Course &lt;= 12 hrs/wk</fullName>
            </value>
            <value>
                <fullName>Attending Training Course &gt; 12 hrs/wk</fullName>
            </value>
            <value>
                <fullName>Not attending school</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>