force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Currently_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>CC_Currently_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Enrolled?</label>
    <type>Checkbox</type>
</CustomField>