force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Birth__c</fullName>
    <description>Store Birthdate of the person associated with the Application Contact</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>