force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Date_Of_Hire__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_Of_Hire__c</fullName>
    <label>Date Of Hire</label>
    <type>Date</type>
</CustomField>