force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Date_of_Termination__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Termination__c</fullName>
    <label>Date of Termination</label>
    <type>Date</type>
</CustomField>