force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Decrypted_SSN__c.field-meta.xml
<CustomField>
    <fullName>CC_Decrypted_SSN__c</fullName>
    <description>Stores decrypted SSN number</description>
    <label>Decrypted SSN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>