force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Development_Maintenance_of_Programs__c.field-meta.xml
<CustomField>
    <fullName>CC_Development_Maintenance_of_Programs__c</fullName>
    <description>Designation Types of Development Maintenance</description>
    <label>Development and Maintenance of Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Childhood Education Program</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>School Age</fullName>
            </value>
            <value>
                <fullName>Services for children with disabilities</fullName>
            </value>
            <value>
                <fullName>Daily Activities</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>