force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Direct_Relationship_Of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>CC_Direct_Relationship_Of_Applicant__c</fullName>
    <label>Direct Relationship Of Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Relationship_Type</valueSetName>
    </valueSet>
</CustomField>