force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Do_not_need_care_assistance__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_not_need_care_assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not need care assistance</label>
    <type>Checkbox</type>
</CustomField>