force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Do_you__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you__c</fullName>
    <label>Do you</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Live with relatives</fullName>
            </value>
            <value>
                <fullName>Live with someone else</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>