force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Do_you_live_in_an_Other__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_live_in_an_Other__c</fullName>
    <inlineHelpText>If other, please specify for example hotel, motel, campground, shelter</inlineHelpText>
    <label>Do you live in an Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>