force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Do_you_need_an_interpreter__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_need_an_interpreter__c</fullName>
    <label>Do you need an interpreter?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>