force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Does_agency_assist_in_housing_cost__c.field-meta.xml
<CustomField>
    <fullName>CC_Does_agency_assist_in_housing_cost__c</fullName>
    <description>Does an agency assist you in housing costs?</description>
    <label>Does agency assist you in housing cost?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>