force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Does_household_has_different_name__c.field-meta.xml
<CustomField>
    <fullName>CC_Does_household_has_different_name__c</fullName>
    <inlineHelpText>Does this household member (permanent or temporary) ever gone by a different name?</inlineHelpText>
    <label>Does household member has different name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>