force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Does_this_child_have_an_absent_parent__c.field-meta.xml
<CustomField>
    <fullName>CC_Does_this_child_have_an_absent_parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does this child have an absent parent?</label>
    <type>Checkbox</type>
</CustomField>