force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Eligibility_Determination__c.field-meta.xml
<CustomField>
    <fullName>CC_Eligibility_Determination__c</fullName>
    <label>Eligibility Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Needs Care</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
                <isActive>false</isActive>
                <label>Excluded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>