force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <description>Store Email of the person associated with the Application Contact</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>