force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Email_Address_Co_Applicant__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address_Co_Applicant__c</fullName>
    <label>Email Address Co Applicant</label>
    <type>Email</type>
</CustomField>