force-app/main/default/objects/CC_Application_Contact__c/fields/CC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>