force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>CC_Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>