force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Ever_gone_by_a_different_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Ever_gone_by_a_different_First_Name__c</fullName>
    <inlineHelpText>First Name (fill if Household member has permanent or temporary different first name)</inlineHelpText>
    <label>Ever gone by a different First Name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>